# logistics-optimizer

./: .gitignore  CMakeLists.txt  README.md
data/: balanced.csv  unbalanced.csv
docs/diagrams/: class_diagram.puml  sequence.puml  use_case.puml
src/cli/: main.cpp
src/core/: simulation.cpp  simulation.h  transport_solver.cpp  transport_solver.h
src/io/: csv_reader.cpp  csv_reader.h
tests/: CMakeLists.txt  test_simulation.cpp  test_transport.cpp
